Fix uneven layout (#937)
* revert layout change

* fix <ShapeFeature> horizontal alignment

* fix alignment of logos on homepage

--- a/src/ui/components/ShapeFeature/stylesheet.css
+++ b/src/ui/components/ShapeFeature/stylesheet.css
@@ -88,7 +88,7 @@
 
 @media (min-width: 888px) {
   :scope {
-    margin: 4rem calc(-1 * var(--offset-horizontal));
+    margin: 4rem 0;
     grid-column: 2/-2;
   }
 
